--- a/README.adoc
+++ b/README.adoc
@@ -4,6 +4,6 @@ image:https://maven-badges.herokuapp.com/maven-central/io.github.oliviercailloux
 
 Java source for (un)marshalling XMCDA-2.2.1 files, JAXB-generated from the schema
 
-This artifact is http://search.maven.org/#search|ga|1|g%3A%22io.github.oliviercailloux%22%20a%3A%22xmcda-2.2.1-jaxb%22[published] to Maven Central.
+This artifact is http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22io.github.oliviercailloux%22%20a%3A%22xmcda-2.2.1-jaxb%22[published] to Maven Central.
 
 See https://github.com/oliviercailloux/XMCDA-2.2.1-JAXB/blob/master/src/test/java/io/github/oliviercailloux/xmcda_2_2_1_jaxb/marshal/TestMarshal.java[TestMarshal.java] for an example.
